replace group name and fixed reminder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <option value="chores">Chores</option>
       <option value="ddl">DDL</option>
       <option value="training">Training</option>
-      <option value="travel">Travel</option>
+      <option value="fun">Fun</option>
     </select>
     <br>
     <input type="date" id="datepicker">
@@ -33,7 +33,7 @@
     <input type="radio" name="todoboddy" value="Chores" id="choosechores">Chores
     <input type="radio" name="todoboddy" value="DDL" id="chooseddl">DDL
     <input type="radio" name="todoboddy" value="Training" id="choosetraining">Training
-    <input type="radio" name="todoboddy" value="Travel" id="choosetravel">Travel
+    <input type="radio" name="todoboddy" value="Fun" id="choosefun">Fun
   </div>
 
   <div id="handleInfo">
