--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
   </div>
 
   <div id="handleInfo">
+    <p id="warning" style="display: none;">Do you want to delete overdate issues? <button class="delAllBtn">❌ Delete all</button></p>
     <p>What's next?</p>
+
     <ul id="todoLists">
+
     </ul>
   </div>
   <script type="application/javascript" src="main.js"></script>
