small changes made

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
   </div>
 
   <div id="handleInfo">
-    <p id="warning" style="display: none;">Do you want to delete overdate issues? <button class="delAllBtn">❌ Delete all</button></p>
-    <p>What's next?</p>
+    <p>What's next?<span id="warning" style="display: none;"><span>Do you want to delete overdate issues?</span><button class="delAllBtn">❌ Delete all</button></span></p>
 
     <ul id="todoLists">
 
